# romanimpreprocess

./: .pre-commit-config.yaml  LICENSE  README.rst  pars.py  pyproject.toml  requirements.txt  sample_Step0.yaml  sample_Step1.yaml
.github/workflows/: pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
GalPoisson/: draw_with_tilnus.py
L1_to_L2/: README.rst  gen_cal_image.py  gen_noise_image.py  oututils.py
docs/: L1_to_L2_README.rst  conf.py  conventions.tex  index.rst
from_sim/: README.rst  sim_to_isim.py
runs/summer2025run/: OpenUniverse_to_L1L2.job  OpenUniverse_to_L1L2.py  README.rst  convert_dark.py  convert_flt.py  convert_loflt.py  make_dark_file.py  make_gain_file.py  make_sca_files.job.template  makemask.py  postprocess_calfiles.py  settings_IM_107_8.yaml  test_run.py  write_linearity_config.pl  write_solid-waffle_config.pl
src/romanimpreprocess/: pars.py
src/romanimpreprocess/L1_to_L2/: denoise_construct.py  gen_cal_image.py  gen_noise_image.py  oututils.py
src/romanimpreprocess/L1_to_L2/GalPoisson/: draw_with_tilnus.py  find_tilnus.py
src/romanimpreprocess/from_sim/: sim_to_isim.py
src/romanimpreprocess/utils/: bitutils.py  context_figure.py  coordutils.py  diff.py  fitting.py  flatutils.py  fpaplot.py  ipc_linearity.py  maskhandling.py  processlog.py  reference_subtraction.py  sky.py  typefix.py  visualize.py
tests/: many_realizations.py
tests/romanimpreprocess/: test_area.py  test_bits.py  test_drawfromtilnus_analytic.py  test_linutils.py  test_pearson.py  test_sim2l2.py  test_workflow.py
utils/: README.rst  bitutils.py  coordutils.py  diff.py  fitting.py  flatutils.py  fpaplot.py  ipc_linearity.py  maskhandling.py  processlog.py  reference_subtraction.py  sky.py  visualize.py
validation_tests/: README.rst  many_realizations.py
